--- a/site.css
+++ b/site.css
@@ -655,7 +655,7 @@ iframe {
 		margin: 20px 0;
 	}
 	
-	#aboutMe h2 #media h2, #maps h2, #teaching h2, #interactiveMaps h2 {
+	#aboutMe h2, #media h2, #maps h2, #teaching h2, #interactiveMaps h2 {
 		margin-top: 100px;
 	}
 	
