--- a/site.css
+++ b/site.css
@@ -659,8 +659,8 @@ iframe {
 		margin-top: 100px;
 	}
 	
-	#aboutMe h2 {
-		margin-top: 140px;
+	#aboutMe {
+		margin: 90px 0 140px 0;
 	}
 	
 	.maps-heading {
