--- a/site.css
+++ b/site.css
@@ -616,6 +616,17 @@ iframe {
 	padding-bottom: 5px;
 }
 
+.comingSoon {
+	margin-top: 50%;
+	background: rgba(0,0,0,0.4);
+	font-style: italic;
+	padding: 30px;
+}
+
+.comingSoon h2 {
+	margin-bottom: 0;
+}
+
 @media only screen and (max-device-width: 768px) {
 	#blog {
 		margin-top: 200px;
